# doc

./: .gitignore  CNAME  LICENSE  README.md  robots.txt
.github/workflows/: deploy.yml  regression.yml
book/: 01_introduction.html  02_features.html  02_getting_started.html  03_code_examples.html  03_getting_started.html  04_code_examples.html  04_language_reference.html  05_development_environment.html  05_language_reference.html  06_appendix.html  06_development_environment.html  07_appendix.html  404.html  book.toml  fetch-grammar.sh  highlight.js  index.html  mkdocs.yml  mode-veryl.js  print.html  searcher-09f2665d.js  searchindex-b3055dba.js  searchindex.js  searchindex.json  sitemap.txt  sitemap.xml  toc.html  toc.js  veryl-init.js
book/02_getting_started/: 01_installation.html  02_hello_world.html
book/03_code_examples/: 01_module.html  02_instantiation.html  03_interface.html  04_package.html
book/03_getting_started/: 01_installation.html  02_hello_world.html
book/04_code_examples/: 01_module.html  02_instantiation.html  03_interface.html  04_package.html
book/04_language_reference/: 01_source_code_structure.html  02_lexical_structure.html  03_data_type.html  04_expression.html  05_statement.html  06_declaration.html  07_module.html  08_interface.html  09_package.html  10_systemverilog_interoperation.html  11_visibility.html
book/05_development_environment/: 01_project_configuration.html  02_dependencies.html  03_publish_project.html  04_directory_layout.html  05_formatter.html  06_linter.html  07_language_server.html  08_compatibility.html  09_documentation.html  10_github_action.html
book/05_language_reference/: 01_source_code_structure.html  02_lexical_structure.html  03_data_type.html  04_expression.html  05_statement.html  06_declaration.html  07_module.html  08_interface.html  09_package.html  10_systemverilog_interoperation.html  11_visibility.html  12_foreign_language_integration.html  13_integrated_test.html  14_generics.html  15_clock_domain_annotation.html  16_standard_library.html  17_alias.html  18_execution_model.html  19_type_inference.html
book/06_appendix/: 01_formal_syntax.html  02_semantic_error.html
book/06_development_environment/: 01_project_configuration.html  02_dependencies.html  03_publish_project.html  04_directory_layout.html  05_formatter.html  06_linter.html  07_language_server.html  07_simulator.html  08_compatibility.html  08_language_server.html  09_compatibility.html  09_documentation.html  10_documentation.html  10_github_action.html  11_github_action.html  12_source_map.html  13_verylup.html  14_migrate_to_new_version.html  15_docker_image.html  16_translator.html  17_synthesizer.html  18_metadata.html
book/07_appendix/: 01_formal_syntax.html  02_semantic_error.html
book/ja/: 01_introduction.html  02_features.html  02_getting_started.html  03_code_examples.html  03_getting_started.html  04_code_examples.html  04_language_reference.html  05_development_environment.html  05_language_reference.html  06_appendix.html  06_development_environment.html  07_appendix.html  404.html  highlight.js  index.html  mode-veryl.js  print.html  searcher-09f2665d.js  searchindex.js  searchindex.json  toc-d102f71b.js  toc.html  toc.js
book/po/: ja.po
book/src/: 01_introduction.md  (+3 more)
nightly/: index.html
playground/: Cargo.toml  about.toml  build.rs  index.html  licenses.json  style.css
playground/html/: index.html  style.css
playground/html/examples/: counter_tb.veryl
playground/pkg/: veryl_wasm.js  veryl_wasm_bg.wasm
playground/src/: lib.rs
playground/surfer/: index.html  integration.js  surfer.js
(+671 files in other folders)
