[package]
name = "veryl-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
miette                   = {version = "7.2", features = ["fancy-no-syscall"]}
semver                   = {version = "1.0", features = ["serde"]}
veryl-analyzer           = {git = "https://github.com/veryl-lang/veryl"}
veryl-emitter            = {git = "https://github.com/veryl-lang/veryl"}
veryl-formatter          = {git = "https://github.com/veryl-lang/veryl"}
veryl-metadata           = {git = "https://github.com/veryl-lang/veryl"}
veryl-parser             = {git = "https://github.com/veryl-lang/veryl"}
wasm-bindgen             = "0.2"

[workspace]

[profile.release]
# Workaround for long time compilation
# https://github.com/rust-lang/rust/issues/106211
codegen-units = 1
# for wasm-pack
opt-level = "z"
