[package]
name    = "veryl-wasm"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
miette                   = {version = "7.2", features = ["fancy-no-syscall"]}
semver                   = {version = "1.0", features = ["serde"]}
veryl-analyzer           = {git = "https://github.com/veryl-lang/veryl"}
veryl-emitter            = {git = "https://github.com/veryl-lang/veryl"}
veryl-formatter          = {git = "https://github.com/veryl-lang/veryl"}
veryl-metadata           = {git = "https://github.com/veryl-lang/veryl"}
veryl-parser             = {git = "https://github.com/veryl-lang/veryl"}
wasm-bindgen             = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[workspace]

[profile.dev]
# Workaround for reference type
# https://github.com/rustwasm/wasm-bindgen/issues/4211
strip = true

[profile.release]
# for wasm-pack
opt-level = "z"
# Workaround for reference type
# https://github.com/rustwasm/wasm-bindgen/issues/4211
strip = true

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

# Workaround for Rust 1.87.0
# https://github.com/rust-lang/rust/issues/141048
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]
